force-app/main/default/objects/Customer__c/fields/Acquiring_Card_Processing__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Card_Processing__c</fullName>
    <label>Acquiring (Card Processing)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PayIns</fullName>
            </value>
            <value>
                <fullName>PayOuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>