force-app/main/default/objects/Customer__c/fields/Acquiring_Pay_Ins__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Pay_Ins__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquiring (Pay Ins)</label>
    <type>Checkbox</type>
</CustomField>