force-app/main/default/objects/Customer__c/fields/Acquiring_Pay_Outs__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Pay_Outs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acquiring(Pay Outs)</label>
    <type>Checkbox</type>
</CustomField>