force-app/main/default/objects/Customer__c/fields/Actual_Last_Month_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Actual_Last_Month_Turnover__c</fullName>
    <label>Actual Last Month Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>