force-app/main/default/objects/Customer__c/fields/Actual_Last_Months_Volumes__c.field-meta.xml
<CustomField>
    <fullName>Actual_Last_Months_Volumes__c</fullName>
    <label>Actual Last Months Volumes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>