force-app/main/default/objects/Customer__c/fields/AML_Officer__c.field-meta.xml
<CustomField>
    <fullName>AML_Officer__c</fullName>
    <label>AML Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>