force-app/main/default/objects/Customer__c/fields/AML_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>AML_Risk_Level__c</fullName>
    <label>AML Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Risk</fullName>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
            </value>
            <value>
                <fullName>High Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>