force-app/main/default/objects/Customer__c/fields/AML_Risk_Matrix_ver__c.field-meta.xml
<CustomField>
    <fullName>AML_Risk_Matrix_ver__c</fullName>
    <label>AML Risk Matrix ver.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>