force-app/main/default/objects/Customer__c/fields/AML_Tool_Comment__c.field-meta.xml
<CustomField>
    <fullName>AML_Tool_Comment__c</fullName>
    <label>AML Tool Comment</label>
    <type>TextArea</type>
</CustomField>