force-app/main/default/objects/Customer__c/fields/Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Approved_by__c</fullName>
    <label>Approved/Rejected by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>