force-app/main/default/objects/Customer__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <formula>Approver_Name__r.FirstName + &apos; &apos; +  Approver_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver</label>
    <type>Text</type>
</CustomField>