force-app/main/default/objects/Customer__c/fields/Approver_Position__c.field-meta.xml
<CustomField>
    <fullName>Approver_Position__c</fullName>
    <formula>Approver_Name__r.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver Position</label>
    <type>Text</type>
</CustomField>