force-app/main/default/objects/Customer__c/fields/Are_there_any_relevant_Adverse_Media__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_relevant_Adverse_Media__c</fullName>
    <label>Are there any relevant Adverse Media on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>No relevant adverse media</fullName>
            </value>
            <value>
                <fullName>Subject to criminal proceedings and/or asset freeze</fullName>
            </value>
            <value>
                <fullName>Supervisory sanctions</fullName>
            </value>
            <value>
                <fullName>Allegations of ML/FT/financial crime</fullName>
            </value>
            <value>
                <fullName>Other Adverse media (not older than 5 years)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>