force-app/main/default/objects/Customer__c/fields/AVG_TRX_AMT__c.field-meta.xml
<CustomField>
    <fullName>AVG_TRX_AMT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AVG TRX AMT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>