force-app/main/default/objects/Customer__c/fields/Bank_Currency__c.field-meta.xml
<CustomField>
    <fullName>Bank_Currency__c</fullName>
    <label>Bank Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>