force-app/main/default/objects/Customer__c/fields/Bank_Status__c.field-meta.xml
<CustomField>
    <fullName>Bank_Status__c</fullName>
    <label>Bank Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>