force-app/main/default/objects/Customer__c/fields/Business_Industry_Activity__c.field-meta.xml
<CustomField>
    <fullName>Business_Industry_Activity__c</fullName>
    <label>Business Industry/Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apparel and Fashion</fullName>
            </value>
            <value>
                <fullName>Arts and Crafts Supplies</fullName>
            </value>
            <value>
                <fullName>Automotive Parts and Accessories</fullName>
            </value>
            <value>
                <fullName>Baby and Maternity Products</fullName>
            </value>
            <value>
                <fullName>Beauty and Personal Care Products</fullName>
            </value>
            <value>
                <fullName>Books, Music, and Media</fullName>
            </value>
            <value>
                <fullName>Computer Hardware and Software</fullName>
            </value>
            <value>
                <fullName>Dating Services</fullName>
            </value>
            <value>
                <fullName>Electronics and Gadgets</fullName>
            </value>
            <value>
                <fullName>Event Tickets and Entertainment</fullName>
            </value>
            <value>
                <fullName>Fitness and Sports Equipment</fullName>
            </value>
            <value>
                <fullName>Food and Grocery</fullName>
            </value>
            <value>
                <fullName>Furniture and Home Improvement</fullName>
            </value>
            <value>
                <fullName>Gifts and Novelty Items</fullName>
            </value>
            <value>
                <fullName>Health and Wellness Products</fullName>
            </value>
            <value>
                <fullName>Home Decor and Furnishings</fullName>
            </value>
            <value>
                <fullName>Home and Kitchen Appliances</fullName>
            </value>
            <value>
                <fullName>Industrial and Scientific Supplies</fullName>
            </value>
            <value>
                <fullName>Jewelry and Accessories</fullName>
            </value>
            <value>
                <fullName>Mobile Phones and Accessories</fullName>
            </value>
            <value>
                <fullName>Office Supplies and Stationery</fullName>
            </value>
            <value>
                <fullName>Pet Supplies</fullName>
            </value>
            <value>
                <fullName>Online Retail (General)</fullName>
            </value>
            <value>
                <fullName>Services (e.g., Online Courses, Consulting, Digital Marketing)</fullName>
            </value>
            <value>
                <fullName>Toys and Games</fullName>
            </value>
            <value>
                <fullName>Travel and Hospitality Services</fullName>
            </value>
            <value>
                <fullName>Cryptocurrency and Blockchain Services</fullName>
            </value>
            <value>
                <fullName>Online Gambling and Casinos</fullName>
            </value>
            <value>
                <fullName>Forex Trading (Foreign Exchange)</fullName>
            </value>
            <value>
                <fullName>Adult Entertainment Products or Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>