force-app/main/default/objects/Customer__c/fields/Business_Location__c.field-meta.xml
<CustomField>
    <fullName>Business_Location__c</fullName>
    <label>Business Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>