force-app/main/default/objects/Customer__c/fields/C2B_payments_Accepted_by__c.field-meta.xml
<CustomField>
    <fullName>C2B_payments_Accepted_by__c</fullName>
    <label>C2B payments Accepted by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noda</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>