force-app/main/default/objects/Customer__c/fields/CDD_Level__c.field-meta.xml
<CustomField>
    <fullName>CDD_Level__c</fullName>
    <label>CDD Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simplified CDD</fullName>
            </value>
            <value>
                <fullName>Standard CDD</fullName>
            </value>
            <value>
                <fullName>Enhanced CDD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>