force-app/main/default/objects/Customer__c/fields/Certified_Documents__c.field-meta.xml
<CustomField>
    <fullName>Certified_Documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Documents</label>
    <type>Checkbox</type>
</CustomField>