force-app/main/default/objects/Customer__c/fields/Certified_Organizational_Chart__c.field-meta.xml
<CustomField>
    <fullName>Certified_Organizational_Chart__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certified Organizational Chart</label>
    <type>Checkbox</type>
</CustomField>