force-app/main/default/objects/Customer__c/fields/Compliance_policies__c.field-meta.xml
<CustomField>
    <fullName>Compliance_policies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance policies</label>
    <type>Checkbox</type>
</CustomField>