force-app/main/default/objects/Customer__c/fields/Country_Blocks__c.field-meta.xml
<CustomField>
    <fullName>Country_Blocks__c</fullName>
    <label>Country Blocks</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>