force-app/main/default/objects/Customer__c/fields/Country_of_citizenship_of_UBO__c.field-meta.xml
<CustomField>
    <fullName>Country_of_citizenship_of_UBO__c</fullName>
    <label>Country of citizenship of UBO ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_for_AML</valueSetName>
    </valueSet>
</CustomField>