force-app/main/default/objects/Customer__c/fields/Country_of_incorporation_of_the_Corpora__c.field-meta.xml
<CustomField>
    <fullName>Country_of_incorporation_of_the_Corpora__c</fullName>
    <label>Country of incorporation of the Corpora</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_for_AML</valueSetName>
    </valueSet>
</CustomField>