force-app/main/default/objects/Customer__c/fields/Date_of_AML__c.field-meta.xml
<CustomField>
    <fullName>Date_of_AML__c</fullName>
    <label>Date of AML</label>
    <type>Date</type>
</CustomField>