force-app/main/default/objects/Customer__c/fields/DBA_Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Trade_Name__c</fullName>
    <label>DBA/Trade Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>