force-app/main/default/objects/Customer__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <label>Detailed Description:</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>