force-app/main/default/objects/Customer__c/fields/Direct_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Direct_Merchant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Direct Merchant</label>
    <type>Checkbox</type>
</CustomField>