force-app/main/default/objects/Customer__c/fields/Do_you_need_a_license_to_carry_out_your__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_a_license_to_carry_out_your__c</fullName>
    <label>Do you need a license to carry out your</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>