force-app/main/default/objects/Customer__c/fields/Does_customer_hold_license__c.field-meta.xml
<CustomField>
    <fullName>Does_customer_hold_license__c</fullName>
    <label>Does customer hold license ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Yes, licensed</fullName>
            </value>
            <value>
                <fullName>Does not hold any license</fullName>
            </value>
            <value>
                <fullName>License not required for this business field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>