force-app/main/default/objects/Customer__c/fields/Duration_of_business_activity__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_business_activity__c</fullName>
    <label>Duration of business activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>