force-app/main/default/objects/Customer__c/fields/Duration_of_business_relationships__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_business_relationships__c</fullName>
    <label>Duration of business relationships with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Applicant for Business</fullName>
            </value>
            <value>
                <fullName>Less than 1 Year</fullName>
            </value>
            <value>
                <fullName>More than 1 Year</fullName>
            </value>
            <value>
                <fullName>More than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>