force-app/main/default/objects/Customer__c/fields/Enhanced_Periodic_KYC__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Periodic_KYC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhanced Periodic KYC</label>
    <type>Checkbox</type>
</CustomField>