force-app/main/default/objects/Customer__c/fields/Enhanced_TM__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_TM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhanced TM</label>
    <type>Checkbox</type>
</CustomField>