force-app/main/default/objects/Customer__c/fields/Enhanced_Webshield__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Webshield__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhanced Webshield</label>
    <type>Checkbox</type>
</CustomField>