force-app/main/default/objects/Customer__c/fields/Enhnaced_Sanction_Screening__c.field-meta.xml
<CustomField>
    <fullName>Enhnaced_Sanction_Screening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enhnaced Sanction Screening</label>
    <type>Checkbox</type>
</CustomField>