force-app/main/default/objects/Customer__c/fields/Exp_Monthly_Volumes__c.field-meta.xml
<CustomField>
    <fullName>Exp_Monthly_Volumes__c</fullName>
    <label>Exp.Monthly Volumes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>