force-app/main/default/objects/Customer__c/fields/From_Partner__c.field-meta.xml
<CustomField>
    <fullName>From_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Partner</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>