force-app/main/default/objects/Customer__c/fields/Full_Reliance_WL__c.field-meta.xml
<CustomField>
    <fullName>Full_Reliance_WL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Full Reliance White Label</label>
    <type>Checkbox</type>
</CustomField>