force-app/main/default/objects/Customer__c/fields/How_merchant_was_introduced_to_Noda__c.field-meta.xml
<CustomField>
    <fullName>How_merchant_was_introduced_to_Noda__c</fullName>
    <label>How merchant was introduced to Noda ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Direct (Customer reached out Noda)</fullName>
            </value>
            <value>
                <fullName>Direct (Noda Sales Agent reached out Customer)</fullName>
            </value>
            <value>
                <fullName>Referral (Referrer, Intermediary)</fullName>
            </value>
            <value>
                <fullName>Referral (Reputable, Trustable Referrer or Intermediary)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>