force-app/main/default/objects/Customer__c/fields/How_settlement_will_be_made__c.field-meta.xml
<CustomField>
    <fullName>How_settlement_will_be_made__c</fullName>
    <label>How settlement will be made ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Directly to the merchants bank account</fullName>
            </value>
            <value>
                <fullName>Directly to the merchants bank account via Resellers account</fullName>
            </value>
            <value>
                <fullName>To the Third party entity (parent entity/corporate shareholders entity)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>