force-app/main/default/objects/Customer__c/fields/Is_Complete__c.field-meta.xml
<CustomField>
    <fullName>Is_Complete__c</fullName>
    <formula>AND(
     NOT(ISBLANK(TEXT(AML_Risk_Level__c))),
    TRUE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Complete</label>
    <type>Checkbox</type>
</CustomField>