force-app/main/default/objects/Customer__c/fields/Is_Source_of_Wealth_Source_of_Funds_know__c.field-meta.xml
<CustomField>
    <fullName>Is_Source_of_Wealth_Source_of_Funds_know__c</fullName>
    <label>Is Source of Wealth/Source of Funds know</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>Known (Supported with documents)</fullName>
            </value>
            <value>
                <fullName>Known (From Application form or Other)</fullName>
            </value>
            <value>
                <fullName>Not Applicable (Low/Medium Risk or Other)</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>