force-app/main/default/objects/Customer__c/fields/Is_there_PEP_Involvment__c.field-meta.xml
<CustomField>
    <fullName>Is_there_PEP_Involvment__c</fullName>
    <label>Is there PEP Involvment ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BLANK</fullName>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>State - Owned Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>