force-app/main/default/objects/Customer__c/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <label>Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Limited Company (Ltd)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Company (LLC)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Partnership (LLP)</fullName>
            </value>
            <value>
                <fullName>Sole Proprietorship</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Public Limited Company (PLC)</fullName>
            </value>
            <value>
                <fullName>Partnership (General Partnership, Limited Partnership)</fullName>
            </value>
            <value>
                <fullName>Nonprofit Corporation</fullName>
            </value>
            <value>
                <fullName>Joint Venture</fullName>
            </value>
            <value>
                <fullName>Private Limited Company (Pvt. Ltd.)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Limited Partnership (LLLP)</fullName>
            </value>
            <value>
                <fullName>Limited Liability Limited Company (LLLC)</fullName>
            </value>
            <value>
                <fullName>Corporation (C Cooperation, S Cooperation)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>