force-app/main/default/objects/Customer__c/fields/License_Registration_required__c.field-meta.xml
<CustomField>
    <fullName>License_Registration_required__c</fullName>
    <label>License/Registration required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>