force-app/main/default/objects/Customer__c/fields/MAX_TRX_CNT__c.field-meta.xml
<CustomField>
    <fullName>MAX_TRX_CNT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MAX TRX CNT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>