force-app/main/default/objects/Customer__c/fields/MLRO_Approval__c.field-meta.xml
<CustomField>
    <fullName>MLRO_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MLRO Approval</label>
    <type>Checkbox</type>
</CustomField>