force-app/main/default/objects/Customer__c/fields/Monthly_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Turnover__c</fullName>
    <label>Monthly Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>