force-app/main/default/objects/Customer__c/fields/Name_Surname__c.field-meta.xml
<CustomField>
    <fullName>Name_Surname__c</fullName>
    <label>Name Surname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>