force-app/main/default/objects/Customer__c/fields/Nationality_of_UBO__c.field-meta.xml
<CustomField>
    <fullName>Nationality_of_UBO__c</fullName>
    <label>Nationality of UBO ?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries_for_AML</valueSetName>
    </valueSet>
</CustomField>