force-app/main/default/objects/Customer__c/fields/Number_of_employee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employee__c</fullName>
    <label>Number of employee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>