force-app/main/default/objects/Customer__c/fields/Onboarding_Officer__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onboarding Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers3</relationshipName>
    <type>Lookup</type>
</CustomField>