force-app/main/default/objects/Customer__c/fields/Open_Banking_PayIns_PayOuts__c.field-meta.xml
<CustomField>
    <fullName>Open_Banking_PayIns_PayOuts__c</fullName>
    <label>Open Banking (PayIns &amp; PayOuts)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PayIns</fullName>
            </value>
            <value>
                <fullName>PayOuts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>