force-app/main/default/objects/Customer__c/fields/Open_Banking_PayOuts__c.field-meta.xml
<CustomField>
    <fullName>Open_Banking_PayOuts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Banking (PayOuts)</label>
    <type>Checkbox</type>
</CustomField>