force-app/main/default/objects/Customer__c/fields/Overall_Concerns_Comment_Box__c.field-meta.xml
<CustomField>
    <fullName>Overall_Concerns_Comment_Box__c</fullName>
    <label>Overall Concerns Comment Box</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>