force-app/main/default/objects/Customer__c/fields/Partial_Reliance_WL__c.field-meta.xml
<CustomField>
    <fullName>Partial_Reliance_WL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Reliance White Label</label>
    <type>Checkbox</type>
</CustomField>