force-app/main/default/objects/Customer__c/fields/Pay_by_link__c.field-meta.xml
<CustomField>
    <fullName>Pay_by_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pay by link</label>
    <type>Checkbox</type>
</CustomField>