force-app/main/default/objects/Customer__c/fields/PayIn_s_volume__c.field-meta.xml
<CustomField>
    <fullName>PayIn_s_volume__c</fullName>
    <label>PayIn&apos;s volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>