force-app/main/default/objects/Customer__c/fields/PayOuts_number__c.field-meta.xml
<CustomField>
    <fullName>PayOuts_number__c</fullName>
    <label>PayOuts number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>