force-app/main/default/objects/Customer__c/fields/PayOuts_volume__c.field-meta.xml
<CustomField>
    <fullName>PayOuts_volume__c</fullName>
    <label>PayOuts volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>