force-app/main/default/objects/Customer__c/fields/Planned_Monthly_Turnover__c.field-meta.xml
<CustomField>
    <fullName>Planned_Monthly_Turnover__c</fullName>
    <label>Planned Monthly Turnover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>