force-app/main/default/objects/Customer__c/fields/Reason_of_AML__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_AML__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scorecard (default)</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>Request for information (Law Enforcements, Regulators etc.)</fullName>
            </value>
            <value>
                <fullName>MLRO or Senior Management Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>