force-app/main/default/objects/Customer__c/fields/Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Registered_Address__c</fullName>
    <label>Registered Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>